# sshlirpCI

./: CMakeLists.txt  README.md  ci.conf
script/: checkCommit.sh  chrootSetup.sh  compile.sh  copySource.sh  gitClone.sh  modifyVdens.sh  removeSourceCopy.sh  rootlessDebootstrapWrapper.sh  test.sh
src/: killer.c  main.c  stop.c  test.c  worker.c
src/include/: daemon_utils.h  test.h  worker.h
src/include/init/: init.h  worker_init.h
src/include/scripts/: check_commit_script.h  chroot_setup_script.h  compile_script.h  copy_source_script.h  git_clone_script.h  modify_vdens_script.h  remove_source_copy_script.h  test_script.h
src/include/types/: types.h
src/include/utils/: utils.h
src/lib/init/: init.c  worker_init.c
src/lib/utils/: utils.c
